tests/baselines/reference/symbolProperty51.errors.txt
symbolProperty51.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
symbolProperty51.ts(2,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== symbolProperty51.ts (2 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        module Symbol { }
               ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
        class C {
            [Symbol.iterator]() { }
        }
    }